tests/snapshots/examples_fixtures/tests__array_test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/tests/array_test.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/tests/array_test.flx:2:5
  |
2 |     assert_eq(len([]), 0)
  |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/tests/array_test.flx:6:5
  |
6 |     assert_eq(len([1, 2, 3]), 3)
  |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/tests/array_test.flx:10:5
   |
10 |     assert_eq(reverse([42]), [42])
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/tests/array_test.flx:14:5
   |
14 |     assert_eq(reverse([1, 2, 3]), [3, 2, 1])
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_true`.

  examples/tests/array_test.flx:18:5
   |
18 |     assert_true(contains([1, 2, 3], 2))
   |     ^^^^^^^^^^^

Hint:
  Define it first: let assert_true = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_false`.

  examples/tests/array_test.flx:22:5
   |
22 |     assert_false(contains([1, 2, 3], 99))
   |     ^^^^^^^^^^^^

Hint:
  Define it first: let assert_false = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/tests/array_test.flx:26:5
   |
26 |     assert_eq(sum([1, 2, 3, 4, 5]), 15)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/tests/array_test.flx:30:5
   |
30 |     assert_eq(filter([1, 2, 3, 4], /x -> x > 2), [3, 4])
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/tests/array_test.flx:34:5
   |
34 |     assert_eq(map([1, 2, 3], /x -> x * 2), [2, 4, 6])
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/tests/array_test.flx:38:5
   |
38 |     assert_eq(len(range(1, 5)), 4)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;

Found 10 errors.
== stdout ==
<not executed>
